KubernetesTraining/services/external-service-endpoints.yaml
# the endpoints resource needs to have the same name
# as the service and contain the list of target IP address and ports
# for the service
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
      - ip: 11.11.11.11
      - ip: 22.22.22.22
    ports:
      - port: 80
