KubernetesTraining/services/kubectl-svc.yaml
apiVersion: v1
# kind: Service
# metadata:
#   name: kubia
# spec:
#   ports:
#     - name: http
#       port: 80
#       targetPort: 8080
#     - name: https
#       port: 443
#       targetPort: 8443
#   selector:
#     app: kubia

# using named ports in a service
kind: Service
metadata:
  name: kubia
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  selector:
    app: kubia
