KubernetesTraining/services/kubia-svc-nodeport.yaml
# By making a NodePort service, you make kubernetes reserve a port
# on all its nodes (the same port number is used across all of them)
# and forward incoming connections ot the pods that are part of the service
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort
  selector:
    app: kubia
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30123
